--- a/src/Components/TaskMenu/TaskMenu.module.css
+++ b/src/Components/TaskMenu/TaskMenu.module.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .header div {
@@ -36,4 +36,10 @@
   background: var(--gray-400);
   border-radius: 999px;
   padding: 3px 9px;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
 }
